--- a/src/app/table/local/localSampleTable.component.html
+++ b/src/app/table/local/localSampleTable.component.html
@@ -1,18 +1,19 @@
 
-<p *ngIf="!page"><em>Loading...</em></p>
-<ft-fexporter [data]="page"></ft-fexporter>
+<p *ngIf="!table.result.page"><em>Loading...</em></p>
+<ft-fexporter [data]="table.result.page"></ft-fexporter>
 <ft-fpager  [pageOptions]="table.pageSizes" [selectedPageIndex]='table.pageSizeIndex' (onPageOptionChange)="onPageOptionChange($event)"></ft-fpager>
  <!-- TODO-->
 <ft-fsearch (search)='search($event)'></ft-fsearch>
 <table class='table' *ngIf="page">
     <thead>
         <tr>
-            <th *ngFor='let column of table.columns;let index = index'><ft-fsorter *ngIf='column.type' [icons]='sortIcons' (order)='sortOrder(index,$event)'></ft-fsorter> {{column.title}} </th>
+            <!-- <th *ngFor='let column of table.columns;let index = index'><ft-fsorter *ngIf='column.type' [icons]='sortIcons' (order)='sortOrder(index,$event)'></ft-fsorter> {{column.title}} </th> -->
+            <th *ngFor='let column of table.columns;let index = index'><ft-fsorter *ngIf='column.type' [icons]='sortIcons' (order)='sortOrder(column.name,$event)'></ft-fsorter> {{column.title}} </th>
         </tr>
 <tr>
         <td *ngFor='let column of table.columns;let index = index'>
             <div *ngIf='column.type'>
-                <ft-ffilter [filterType]='filters[index]' [columnName]='column.name' [otherData]='column.filterData' [debounce]='500' (filter)='filter($event)'></ft-ffilter>  
+                <ft-ffilter [source]='"frontend"' [filterType]='filters[index]' [columnName]='column.name' [otherData]='column.filterData' [debounce]='500' (filter)='filter($event)'></ft-ffilter>  
 
 
                 </div>
@@ -23,7 +24,7 @@
 
     </thead>
     <tbody>
-        <tr *ngFor="let entry of page">
+        <tr *ngFor="let entry of table.result.page">
             <ng-container *ngFor="let column of table.columns;let index = index">
                 <td *ngIf="column.type && column.name !== 'status'" (dblclick)="edit(entry['id'],column.name)"> 
                         <span>{{ column.format(entry[column.name]) }}</span>
@@ -40,11 +41,14 @@
                     <button type="button" class="btn btn-light btn-sm tableButton">
                     <span class="fa fa-info-circle"></span> <!--Details -->
                     </button>
+                    <!-- <button type="button" (click)="delete(entry['id'])" class="btn btn-danger btn-sm tableButton">
+                        <span class="fa fa-trash"></span> 
+                        </button> -->
             </td>
         </tr>
     </tbody>
     
 </table>
-<ft-finfo [itemsPerPage]="table.pageSizes[table.pageSizeIndex]" [totalItems]="table.totalRows" [currentPage]="table.currentPage" [totalItemsAfterFilters]='table.filteredRows'></ft-finfo>
-<ft-fpaginate [itemsPerPage]="table.pageSizes[table.pageSizeIndex]" [totalItems]="table.totalRows"  [currentPage]="table.currentPage" [totalItemsAfterFilters]='table.filteredRows' (PagingChange)="onPagingChange($event)"></ft-fpaginate>
+<ft-finfo [itemsPerPage]="table.pageSizes[table.pageSizeIndex]" [totalItems]="table.result?.totalRows" [currentPage]="table.dataModifier.currentPage" [totalItemsAfterFilters]='table.result?.totalRowsAfterModifications'></ft-finfo>
+<ft-fpaginate [itemsPerPage]="table.pageSizes[table.pageSizeIndex]" [totalItems]="table.result?.totalRows"  [currentPage]="table.dataModifier.currentPage" [totalItemsAfterFilters]='table.result?.totalRowsAfterModifications' (PagingChange)="onPagingChange($event)"></ft-fpaginate>
 
