--- a/src/app/table/local/localSampleTable.component.html
+++ b/src/app/table/local/localSampleTable.component.html
@@ -7,7 +7,6 @@
 <table class='table' *ngIf="page">
     <thead>
         <tr>
-            <!-- <th *ngFor='let column of table.columns;let index = index'><ft-fsorter *ngIf='column.type' [icons]='sortIcons' (order)='sortOrder(index,$event)'></ft-fsorter> {{column.title}} </th> -->
             <th *ngFor='let column of table.columns;let index = index'><ft-fsorter *ngIf='column.type' [icons]='sortIcons' (order)='sortOrder(column.name,$event)'></ft-fsorter> {{column.title}} </th>
         </tr>
 <tr>
@@ -17,7 +16,7 @@
 
 
                 </div>
-            <button *ngIf='!column.type' type="button" (click)="resetFilters()" class="btn btn-light btn-sm">Reset filters</button>
+            <button *ngIf='!column.name' type="button" (click)="resetFilters()" class="btn btn-light btn-sm">Reset filters</button>
             </td>
 
         </tr>
@@ -26,6 +25,9 @@
     <tbody>
         <tr *ngFor="let entry of table.result.page">
             <ng-container *ngFor="let column of table.columns;let index = index">
+                    <td *ngIf="column.type === '' && column.name === 'picture'"> 
+                            <img [src]="entry[column.name]" >
+                        </td>
                 <td *ngIf="column.type && column.name !== 'status'" (dblclick)="edit(entry['id'],column.name)"> 
                         <span>{{ column.format(entry[column.name]) }}</span>
                 </td>
