--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,7 +217,7 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
     width:50%;
 }
 
-tr:hover {background-color: green;}
+// tr:hover {background-color: green;}
 
-tr:hover td {color: aqua;}
+// tr:hover td {color: aqua;}
 
