--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<button type="button" [routerLink]="['local']" class="btn btn-primary">Local</button>
-<button type="button" [routerLink]="['remote']" class="btn btn-primary">Remote</button>
+<button class='sample-b' type="button" [routerLink]="['local']" class="app-b-info">Local</button>
+<button class='sample-b' type="button" [routerLink]="['remote']" class="app-b-info">Remote</button>
 
 <router-outlet></router-outlet>
