--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,6 +187,7 @@ th {
 // Make Content flex container
 .content {
   @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+   
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
@@ -237,7 +238,7 @@ th {
 .ft-b-paginate_current,
 .ft-b-paginate {
   @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
-    padding: 12px 9px;
+    //padding: 12px 9px;
     font-size: 10px;
   }
 }
