--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
 </div>
-<button class='sample-b' type="button" [routerLink]="['local']" class="app-b-info">Local</button>
-<button class='sample-b' type="button" [routerLink]="['remote']" class="app-b-info">Remote</button>
+<button class='sample-b' type="button" [routerLink]="['local']" class="app-b-info">Local Data</button>
+<button class='sample-b' type="button" [routerLink]="['remote']" class="app-b-info">Remote Data</button>
 
 <router-outlet></router-outlet>
