Updated using FTable 0.0.20 HttpClientModule is not imported at FTable level so one can use HTTP_INTERCEPTORS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
 </div>
+<pre>
+Sample Using 
+<a href='https://www.npmjs.com/package/ftable'>NPM</a>
+<a href='https://github.com/fairmutex/FTable'>Lib Source code</a>
+
+<a href='https://github.com/fairmutex/FTable-sample'>Sample Front End (This)</a>
+<a href='https://github.com/fairmutex/FTable-WebAPI-sample'>Remote WebAPI Source</a>
+</pre>
 <button class='sample-b' type="button" [routerLink]="['local']" class="app-b-info">Local Data</button>
 <button class='sample-b' type="button" [routerLink]="['remote']" class="app-b-info">Remote Data</button>
 
